--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -4,14 +4,17 @@
 
 {% block content %}
 <div class="container py-5">
+    <!-- Card basics taken from Bootstrap and edited to user needs -->
     <div class="row">
         {% for aquascape in aquascapes %}
         <div class="col-md-4 mb-4">
             <div class="card">
                 <img class="card-img-top" src="{{ aquascape.image.url }}" alt="{{ aquascape.title }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ aquascape.title }}</h5>
-                    <p><small>{{ aquascape.desciption }}</small></p>
+                <div class="card-img-overlay">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ aquascape.title }}</h5>
+                        <p class="card-description">{{ aquascape.desciption }}</p>
+                    </div>
                 </div>
             </div>
         </div>
