--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     {% endblock %}
 
     {% block css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     {% endblock %}
 
@@ -23,7 +24,7 @@
 </head>
 <body>
     <!-- Navbar pulled from Bootstrap and heavily edited to suite user needs -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Aquascape Haven</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <i class="fa-regular fa-store"></i>
+                                <i class="fas fa-store"></i>
                             </a>
                         </li>
                         <li class="nav-item dropdown">
