Started adding styling and content for landing page and conditional logic for the rest of the site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,6 +24,18 @@ body {
     background-color: var(--background-color) !important;
 }
 
+/* Header styles */
+header {
+    font-family: var(--primary-font);
+    color: var(--background-color);
+}
+
+/* Home screen styling */
+.go-to {
+    font-family: var(--primary-font);
+    color: var(--text-color);
+}
+
 /* Card styles */
 .card {
     display: flex;
