--- a/templates/base.html
+++ b/templates/base.html
@@ -38,21 +38,26 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">
                                 <i class="fas fa-store"></i>
+                                Marketplace
                             </a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Community</a></li>
-                                <li><a class="dropdown-item" href="#">Competition</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Tracker</a></li>
-                            </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link" href="#">
+                                <i class="fas fa-people-group"></i>
+                                Social
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="fas fa-trophy"></i>
+                                Competition
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <i class="fas fa-images"></i>
+                                Gallery
+                            </a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
@@ -65,6 +70,38 @@
 
     {% block content %}
     {% endblock %}
+
+    {% if request.path == '/' %}
+    <header class="bg-dark text-white text-center py-3">
+        <h1 class="display-4">Dive into the Art of Aquascaping</h1>
+        <p class="lead">Explore, create, and connect with fellow aquascapers.</p>
+    </header>
+
+    <section class="container py-5">
+        <div class="row text-center">
+            <div class="go-to col-md-6">
+                <h3 id="community">Haven Community</h3>
+                <p>Come and join our group of aquascaping people! Here to help, inspire and natter!</p>
+                <a href="#" class="btn btn-outline">Let's Talk</a>
+            </div>
+            <div class="go-to col-md-6">
+                <h3 id="community">Best of the Best</h3>
+                <p>A little bit of competition is healthy for us all, vote on what you like most or show us what you've got!</p>
+                <a href="#" class="btn btn-outline">Winner!</a>
+            </div>
+            <div class="go-to col-md-6">
+                <h3 id="community">The Gallery</h3>
+                <p>See some of the winners and some of the most beautiful aquascapes from our community.</p>
+                <a href="#" class="btn btn-outline">Let's See</a>
+            </div>
+            <div class="go-to col-md-6">
+                <h3 id="community">Marketplace</h3>
+                <p>We all love to shope so come and see some of our special deals and get what your fish need!</p>
+                <a href="#" class="btn btn-outline">Shopping!</a>
+            </div>
+        </div>
+    </section>
+    {% endif %}
     
 </body>
 </html>
