Corrected issues with descriptions not showing

--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -13,7 +13,7 @@
                 <div class="card-img-overlay">
                     <div class="card-body">
                         <h5 class="card-title">{{ aquascape.title }}</h5>
-                        <p class="card-description">{{ aquascape.desciption }}</p>
+                        <p class="card-description">{{ aquascape.description }}</p>
                     </div>
                 </div>
             </div>
